cleaned up files

--- a/schemas/ai/azure-openai-generate-content.yaml
+++ b/schemas/ai/azure-openai-generate-content.yaml
@@ -21,7 +21,7 @@ AzureOpenAIGenerateContentRequest:
     - template
   properties:
     template:
-      $ref: '#/AzureOpenAIGenerateContentTemplate'
+      $ref: "#/AzureOpenAIGenerateContentTemplate"
       description: Template object for content generation
     variableValues:
       type: object
