--- a/.github/workflows/code-scanning.yml
+++ b/.github/workflows/code-scanning.yml
@@ -3,9 +3,9 @@ name: Code Scanning (YAML, Markdown, Secrets)
 
 on:
   push:
-    branches: [main, master]
+    branches: ["main", "master"]
   pull_request:
-    branches: [main, master]
+    branches: ["main", "master"]
 
 jobs:
   scan-secrets:
