--- a/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateGet.yaml
+++ b/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateGet.yaml
@@ -1,5 +1,5 @@
----
-allOf:
-  - $ref: "../../../../schemas/documents/ContentGenerationTemplateDocument.yaml#/ContentGenerationTemplateDocument"
-description: >
-  Response schema for retrieving a ContentGenerationTemplateDocument by id or brandId.
+ContentGenerationTemplateGet:
+  allOf:
+    - $ref: "../../../../schemas/documents/ContentGenerationTemplateDocument.yaml#/ContentGenerationTemplateDocument"
+  description: >
+    Response schema for retrieving a ContentGenerationTemplateDocument by id or brandId.
