--- a/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateResponse.yaml
+++ b/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateResponse.yaml
@@ -1,9 +1,9 @@
----
-type: object
-properties:
-  id:
-    type: string
-  brandId:
-    type: string
-description: >
-  Minimal response schema for ContentGenerationTemplateDocument creation or deletion.
+ContentGenerationTemplateResponse:
+  type: object
+  properties:
+    id:
+      type: string
+    brandId:
+      type: string
+  description: >
+    Minimal response schema for ContentGenerationTemplateDocument creation or deletion.
