--- a/components/responses/NotFound.yaml
+++ b/components/responses/NotFound.yaml
@@ -1,11 +1,9 @@
----
-# This file was migrated from components/responses.yaml (NotFound)
 NotFound:
   description: Resource not found
   content:
     application/json:
       schema:
-        $ref: "../../schemas/common/error.yaml#/Error"
+        $ref: "../../components/schemas/common/base/Error.yaml#/Error"
       example:
         code: RESOURCE_NOT_FOUND
         message: The requested resource was not found
