--- a/components/responses/Unauthorized.yaml
+++ b/components/responses/Unauthorized.yaml
@@ -1,11 +1,9 @@
----
-# This file was migrated from components/responses.yaml (Unauthorized)
 Unauthorized:
   description: Authentication required
   content:
     application/json:
       schema:
-        $ref: "../../schemas/common/error.yaml#/Error"
+        $ref: "../../components/schemas/common/base/Error.yaml#/Error"
       example:
         code: UNAUTHORIZED
         message: Valid API key required
