--- a/components/schemas/api/internal/brand/BrandResponse.yaml
+++ b/components/schemas/api/internal/brand/BrandResponse.yaml
@@ -1,9 +1,9 @@
----
-type: object
-properties:
-  id:
-    type: string
-  name:
-    type: string
-description: >
-  Minimal response schema for Brand creation or deletion.
+BrandResponse:
+  type: object
+  properties:
+    id:
+      type: string
+    name:
+      type: string
+  description: >
+    Minimal response schema for Brand creation or deletion.
