--- a/components/schemas/api/internal/brand/BrandUpdate.yaml
+++ b/components/schemas/api/internal/brand/BrandUpdate.yaml
@@ -1,16 +1,11 @@
----
-type: object
-properties:
-  name:
-    type: string
-    minLength: 1
-    maxLength: 100
-  description:
-    type: string
-    maxLength: 500
-  socialAccounts:
-    type: array
-    items:
-      $ref: "../../../common/SocialAccountEntry.yaml#/SocialAccountEntry"
-description: >
-  Payload for updating a Brand. All fields are optional and may be provided for partial update.
+BrandUpdate:
+  type: object
+  properties:
+    brandInfo:
+      $ref: "../../../common/base/BrandInfo.yaml#/BrandInfo"
+    socialAccounts:
+      type: array
+      items:
+        $ref: "../../../common/social/SocialAccountEntry.yaml#/SocialAccountEntry"
+  description: >
+    Payload for updating a Brand. All fields are optional and may be provided for partial update.
