--- a/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateCreate.yaml
+++ b/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateCreate.yaml
@@ -1,16 +1,16 @@
----
-type: object
-required:
-  - brandId
-  - templateInfo
-properties:
-  brandId:
-    type: string
-  templateInfo:
-    $ref: "../../../common/TemplateInfo.yaml#/TemplateInfo"
-  schedule:
-    $ref: "../../../common/Schedule.yaml#/Schedule"
-  settings:
-    $ref: "../../../common/TemplateSettings.yaml#/TemplateSettings"
-description: >
-  Payload for creating a new ContentGenerationTemplateDocument. 'brandId' and 'templateInfo' are required.
+ContentGenerationTemplateCreate:
+  type: object
+  required:
+    - brandId
+    - templateInfo
+  properties:
+    brandId:
+      type: string
+    templateInfo:
+      $ref: "../../../common/template/TemplateInfo.yaml#/TemplateInfo"
+    schedule:
+      $ref: "../../../common/schedule/Schedule.yaml#/Schedule"
+    settings:
+      $ref: "../../../common/template/TemplateSettings.yaml#/TemplateSettings"
+  description: >
+    Payload for creating a new ContentGenerationTemplateDocument. 'brandId' and 'templateInfo' are required.
