--- a/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateDelete.yaml
+++ b/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateDelete.yaml
@@ -1,9 +1,9 @@
----
-type: object
-required:
-  - id
-properties:
-  id:
-    type: string
-description: >
-  Payload for deleting a ContentGenerationTemplateDocument by id.
+ContentGenerationTemplateDelete:
+  type: object
+  required:
+    - id
+  properties:
+    id:
+      type: string
+  description: >
+    Payload for deleting a ContentGenerationTemplateDocument by id.
