--- a/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateGet.yaml
+++ b/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateGet.yaml
@@ -1,5 +1,4 @@
-ContentGenerationTemplateGet:
-  allOf:
-    - $ref: "../../../../schemas/documents/ContentGenerationTemplateDocument.yaml#/ContentGenerationTemplateDocument"
-  description: >
-    Response schema for retrieving a ContentGenerationTemplateDocument by id or brandId.
+allOf:
+  - $ref: "../../../../schemas/documents/ContentGenerationTemplateDocument.yaml"
+description: >
+  Response schema for retrieving a ContentGenerationTemplateDocument by id or brandId.
