--- a/components/schemas/common/cognitive/CognitiveObject.yaml
+++ b/components/schemas/common/cognitive/CognitiveObject.yaml
@@ -1,13 +1,4 @@
-CognitiveObject:
-  type: object
-  required:
-    - object
-    - confidence
-    - rectangle
-  properties:
-    object:
-      type: string
-    confidence:
-      type: number
-    rectangle:
-      $ref: "./Rectangle.yaml#/Rectangle"
+type: object
+properties:
+  rectangle:
+    $ref: "./Rectangle.yaml"
