--- a/components/schemas/common/style/VisualStyleObj.yaml
+++ b/components/schemas/common/style/VisualStyleObj.yaml
@@ -1,7 +1,6 @@
-VisualStyleObj:
-  type: object
-  properties:
-    themes:
-      type: array
-      items:
-        $ref: "./VisualStyle.yaml#/VisualStyle"
+type: object
+properties:
+  themes:
+    type: array
+    items:
+      $ref: "./VisualStyle.yaml"
