--- a/components/schemas/common/template/TemplateInfo.yaml
+++ b/components/schemas/common/template/TemplateInfo.yaml
@@ -1,13 +1,12 @@
-TemplateInfo:
-  type: object
-  properties:
-    name:
-      type: string
-    description:
-      type: string
-    contentType:
-      $ref: "../base/ContentType.yaml#/ContentType"
-    socialAccounts:
-      type: array
-      items:
-        $ref: "../social/Platform.yaml#/Platform"
+type: object
+properties:
+  name:
+    type: string
+  description:
+    type: string
+  contentType:
+    $ref: "../base/ContentType.yaml"
+  socialAccounts:
+    type: array
+    items:
+      $ref: "../social/Platform.yaml"
