--- a/components/schemas/documents/ContentGenerationTemplateDocument.yaml
+++ b/components/schemas/documents/ContentGenerationTemplateDocument.yaml
@@ -1,13 +1,12 @@
-ContentGenerationTemplateDocument:
-  allOf:
-    - $ref: "../common/base/BaseModel.yaml#/BaseModel"
-    - type: object
-      properties:
-        brandId:
-          type: string
-        templateInfo:
-          $ref: "../common/template/TemplateInfo.yaml#/TemplateInfo"
-        schedule:
-          $ref: "../common/schedule/Schedule.yaml#/Schedule"
-        settings:
-          $ref: "../common/template/TemplateSettings.yaml#/TemplateSettings"
+allOf:
+  - $ref: "../common/base/BaseModel.yaml"
+  - type: object
+    properties:
+      brandId:
+        type: string
+      templateInfo:
+        $ref: "../common/template/TemplateInfo.yaml"
+      schedule:
+        $ref: "../common/schedule/Schedule.yaml"
+      settings:
+        $ref: "../common/template/TemplateSettings.yaml"
