--- a/components/schemas/documents/PostDocument.yaml
+++ b/components/schemas/documents/PostDocument.yaml
@@ -1,3 +1,2 @@
-PostDocument:
-  type: object
-  description: "Stub for PostDocument schema"
+type: object
+description: Stub for PostDocument schema
