--- a/components/parameters/pagination.yaml
+++ b/components/parameters/pagination.yaml
@@ -1,24 +1,24 @@
-pagination:
-  in: query
-  name: pagination
-  required: false
-  schema:
-    type: object
-    properties:
-      limit:
-        type: integer
-        minimum: 1
-        maximum: 100
-        default: 20
-      offset:
-        type: integer
-        minimum: 0
-        default: 0
-      sort_by:
-        type: string
-        enum: [created_at, updated_at, name]
-        default: created_at
-      sort_order:
-        type: string
-        enum: [asc, desc]
-        default: desc
+name: pagination
+in: query
+description: Pagination and sorting options
+required: false
+schema:
+  type: object
+  properties:
+    limit:
+      type: integer
+      minimum: 1
+      maximum: 100
+      default: 20
+    offset:
+      type: integer
+      minimum: 0
+      default: 0
+    sort_by:
+      type: string
+      enum: [created_at, updated_at, name]
+      default: created_at
+    sort_order:
+      type: string
+      enum: [asc, desc]
+      default: desc
