--- a/components/responses/Unauthorized.yaml
+++ b/components/responses/Unauthorized.yaml
@@ -1,9 +1,8 @@
-Unauthorized:
-  description: Authentication required
-  content:
-    application/json:
-      schema:
-        $ref: "../../components/schemas/common/base/Error.yaml#/Error"
-      example:
-        code: UNAUTHORIZED
-        message: Valid API key required
+description: Authentication required
+content:
+  application/json:
+    schema:
+      $ref: "../schemas/common/base/Error.yaml"
+    example:
+      code: UNAUTHORIZED
+      message: Valid API key required
