--- a/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateUpdate.yaml
+++ b/components/schemas/api/internal/content-generation-template/ContentGenerationTemplateUpdate.yaml
@@ -1,15 +1,14 @@
-ContentGenerationTemplateUpdate:
-  type: object
-  properties:
-    brandId:
-      type: string
-    templateInfo:
-      $ref: "../../../common/template/TemplateInfo.yaml#/TemplateInfo"
-    schedule:
-      $ref: "../../../common/schedule/Schedule.yaml#/Schedule"
-    settings:
-      $ref: "../../../common/template/TemplateSettings.yaml#/TemplateSettings"
-    deleted:
-      type: boolean
-  description: >
-    Payload for updating a ContentGenerationTemplateDocument. All fields are optional and may be provided for partial update.
+type: object
+properties:
+  brandId:
+    type: string
+  templateInfo:
+    $ref: "../../../common/template/TemplateInfo.yaml"
+  schedule:
+    $ref: "../../../common/schedule/Schedule.yaml"
+  settings:
+    $ref: "../../../common/template/TemplateSettings.yaml"
+  deleted:
+    type: boolean
+description: >
+  Payload for updating a ContentGenerationTemplateDocument. All fields are optional and may be provided for partial update.
