--- a/components/schemas/common/base/BaseModel.yaml
+++ b/components/schemas/common/base/BaseModel.yaml
@@ -1,11 +1,10 @@
-BaseModel:
-  type: object
-  required:
-    - id
-    - metadata
-  properties:
-    id:
-      type: string
-      description: unique identifier for the record
-    metadata:
-      $ref: "./Metadata.yaml#/Metadata"
+type: object
+required:
+  - id
+  - metadata
+properties:
+  id:
+    type: string
+    description: unique identifier for the record
+  metadata:
+    $ref: "./Metadata.yaml"
