--- a/components/schemas/common/cognitive/CognitiveData.yaml
+++ b/components/schemas/common/cognitive/CognitiveData.yaml
@@ -1,31 +1,32 @@
-CognitiveData:
-  type: object
-  properties:
-    tags:
-      type: array
-      items:
-        $ref: "./CognitiveTag.yaml#/CognitiveTag"
-    categories:
-      type: array
-      items:
-        $ref: "./CognitiveCategory.yaml#/CognitiveCategory"
-    objects:
-      type: array
-      items:
-        $ref: "./CognitiveObject.yaml#/CognitiveObject"
-    caption:
-      $ref: "./CognitiveCaption.yaml#/CognitiveCaption"
-    denseCaptions:
-      type: array
-      items:
-        $ref: "./CognitiveDenseCaption.yaml#/CognitiveDenseCaption"
-    brands:
-      type: array
-      items:
-        $ref: "./CognitiveBrand.yaml#/CognitiveBrand"
-    people:
-      type: array
-      items:
-        $ref: "./CognitivePerson.yaml#/CognitivePerson"
-    ocrText:
-      type: string
+type: object
+properties:
+  tags:
+    type: array
+    items:
+      $ref: "./CognitiveTag.yaml"
+  categories:
+    type: array
+    items:
+      $ref: "./CognitiveCategory.yaml"
+  objects:
+    type: array
+    items:
+      $ref: "./CognitiveObject.yaml"
+  caption:
+    $ref: "./CognitiveCaption.yaml"
+  denseCaptions:
+    type: array
+    items:
+      $ref: "./CognitiveDenseCaption.yaml"
+  brands:
+    type: array
+    items:
+      $ref: "./CognitiveBrand.yaml"
+  people:
+    type: array
+    items:
+      $ref: "./CognitivePerson.yaml"
+  rectangles:
+    type: array
+    items:
+      $ref: "./Rectangle.yaml"
