--- a/components/schemas/common/cognitive/CognitiveDenseCaption.yaml
+++ b/components/schemas/common/cognitive/CognitiveDenseCaption.yaml
@@ -1,13 +1,4 @@
-CognitiveDenseCaption:
-  type: object
-  required:
-    - text
-    - confidence
-    - boundingBox
-  properties:
-    text:
-      type: string
-    confidence:
-      type: number
-    boundingBox:
-      $ref: "./Rectangle.yaml#/Rectangle"
+type: object
+properties:
+  rectangle:
+    $ref: "./Rectangle.yaml"
