--- a/components/schemas/common/media/MediaMetadata.yaml
+++ b/components/schemas/common/media/MediaMetadata.yaml
@@ -1,19 +1,18 @@
-MediaMetadata:
-  type: object
-  required:
-    - fileName
-    - tags
-    - cognitiveData
-  properties:
-    fileName:
+type: object
+required:
+  - fileName
+  - tags
+  - cognitiveData
+properties:
+  fileName:
+    type: string
+  description:
+    type: string
+  tags:
+    type: array
+    items:
       type: string
-    description:
-      type: string
-    tags:
-      type: array
-      items:
-        type: string
-    suggestedName:
-      type: string
-    cognitiveData:
-      $ref: "../cognitive/CognitiveData.yaml#/CognitiveData"
+  suggestedName:
+    type: string
+  cognitiveData:
+    $ref: "../cognitive/CognitiveData.yaml"
