--- a/components/schemas/common/template/TemplateSettings.yaml
+++ b/components/schemas/common/template/TemplateSettings.yaml
@@ -1,9 +1,8 @@
-TemplateSettings:
-  type: object
-  properties:
-    prompt_template:
-      $ref: "./PromptTemplate.yaml#/PromptTemplate"
-    visual_style:
-      $ref: "../style/VisualStyleObj.yaml#/VisualStyleObj"
-    contentItem:
-      $ref: "../base/ContentItem.yaml#/ContentItem"
+type: object
+properties:
+  prompt_template:
+    $ref: "./PromptTemplate.yaml"
+  visual_style:
+    $ref: "../style/VisualStyleObj.yaml"
+  contentItem:
+    $ref: "../base/ContentItem.yaml"
