--- a/components/schemas/documents/MediaDocument.yaml
+++ b/components/schemas/documents/MediaDocument.yaml
@@ -1,16 +1,15 @@
-MediaDocument:
-  allOf:
-    - $ref: "../common/base/BaseModel.yaml#/BaseModel"
-    - type: object
-      properties:
-        brandId:
-          type: string
-        blobUrl:
-          type: string
-        mediaType:
-          type: string
-          enum:
-            - image
-            - video
-        mediaMetadata:
-          $ref: "../common/media/MediaMetadata.yaml#/MediaMetadata"
+allOf:
+  - $ref: "../common/base/BaseModel.yaml"
+  - type: object
+    properties:
+      brandId:
+        type: string
+      blobUrl:
+        type: string
+      mediaType:
+        type: string
+        enum:
+          - image
+          - video
+      mediaMetadata:
+        $ref: "../common/media/MediaMetadata.yaml"
