updated to include classes

--- a/components/schemas/common/style/OverlayBox.yaml
+++ b/components/schemas/common/style/OverlayBox.yaml
@@ -6,5 +6,7 @@ properties:
     type: number
   vertical_location:
     type: string
+    enum: [top, middle, bottom]
   horizontal_location:
     type: string
+    enum: [left, middle, right]
