--- a/.github/workflows/spec-check.yml
+++ b/.github/workflows/spec-check.yml
@@ -1,34 +1,31 @@
-name: Spec CI
+name: OpenAPI Spec CI
+
 on: [push, pull_request]
 
 jobs:
-  spec:
+  openapi:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
 
-      - name: Lint spec (Spectral)
-        run: npx spectral lint openapi.yaml
+      - name: Generate, lint, validate, and bundle OpenAPI spec
+        run: npm run generate:openapi
 
-      - name: Lint & Validate spec (Redocly)
-        run: npm run spec:lint && npm run spec:validate
+      - name: Validate bundled OpenAPI spec
+        run: npx swagger-cli validate openapi-bundled.json
 
-      - name: Bundle spec
-        run: npm run spec:bundle
-
-      - name: Generate diagrams
-        run: npm run spec:diagrams
-
-      - name: Upload artifacts
+      - name: Upload OpenAPI artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: bundled-openapi
-          path: openapi.generated.yaml
+          name: openapi-artifacts
+          path: |
+            openapi.yaml
+            openapi-bundled.json
