--- a/components/schemas/common/style/VisualStyle.yaml
+++ b/components/schemas/common/style/VisualStyle.yaml
@@ -1,48 +1,9 @@
 type: object
 properties:
-  font:
-    type: object
-    required:
-      - family
-      - size
-    properties:
-      family:
-        type: string
-        description: Font family for the overlay text (e.g., Arial).
-      size:
-        type: string
-        description: Font size (e.g., "32px").
-      weight:
-        type: string
-        enum: [normal, bold]
-        description: Font weight for the overlay text.
-      style:
-        type: string
-        enum: [normal, italic]
-        description: Font style for the overlay text.
-  color:
-    type: object
-    required:
-      - text
-      - background
-    properties:
-      text:
-        type: string
-        description: Color for the overlay text (e.g., "#000000").
-      background:
-        type: string
-        description: Background color for the overlay area (e.g., "#FFFFFF").
-      box:
-        type: string
-        description: Color of the text box background (e.g., "#000000").
-      outline:
-        type: string
-        description: Color for text outline (if supported).
-  outline:
-    type: object
-    properties:
-      color:
-        type: string
-        description: Color for text outline (if supported).
-      width:
-        type: integer
+  text_style:
+    $ref: "./TextStyle.yaml"
+  overlay_box:
+    $ref: "./OverlayBox.yaml"
+  background_color:
+    type: string
+    description: Background color
