--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "OpenAPI specs utilities and scripts",
   "scripts": {
     "api:lint": "redocly lint openapi.yaml",
-    "api:bundle": "redocly bundle openapi.yaml --output build/bundle.yaml",
+    "api:bundle": "redocly bundle openapi.yaml --output openapi-bundled.json",
     "api:validate": "redocly lint --extends recommended-strict openapi.yaml",
     "gen:diagrams": "node scripts/gen-diagrams.js",
     "prepack": "npm run api:bundle && npm run gen:diagrams",
-    "generate:openapi": "node scripts/gen-openapi.js && npm run api:lint && npm run api:validate && redocly bundle openapi.yaml -o openapi-bundled.yaml"
+    "generate:openapi": "node scripts/gen-openapi.js && npm run api:lint && npm run api:validate && redocly bundle openapi.yaml -o openapi-bundled.json"
   },
   "license": "MIT",
   "dependencies": {
