--- a/components/schemas/common/media/Image.yaml
+++ b/components/schemas/common/media/Image.yaml
@@ -6,3 +6,21 @@ properties:
     type: string
   visualStyle:
     $ref: "../style/VisualStyle.yaml"
+  dimensions:
+    type: object
+    properties:
+      width:
+        type: integer
+        description: Image width in pixels
+      height:
+        type: integer
+        description: Image height in pixels
+      aspect_ratio:
+        type: string
+        description: Aspect ratio (e.g., "16:9", "1:1")
+  resolution:
+    type: string
+    description: Image resolution (e.g., "300dpi")
+  format:
+    type: string
+    description: Image file format (e.g., "jpeg", "png")
