--- a/components/schemas/common/schedule/Schedule.yaml
+++ b/components/schemas/common/schedule/Schedule.yaml
@@ -3,12 +3,12 @@ required:
   - days_of_week
   - time_slots
 properties:
-  days_of_week:
+  daysOfWeek:
     type: array
     items:
       type: string
       enum: [monday, tuesday, wednesday, thursday, friday, saturday, sunday]
-  time_slots:
+  timeSlots:
     type: array
     items:
       $ref: "./TimeSlot.yaml"
