--- a/components/schemas/documents/BrandDocument.yaml
+++ b/components/schemas/documents/BrandDocument.yaml
@@ -2,9 +2,7 @@ allOf:
   - $ref: "../common/base/BaseModel.yaml"
   - type: object
     properties:
-      userId:
-        type: string
-      brand_info:
+      brandInfo:
         $ref: "../common/base/BrandInfo.yaml"
       socialAccounts:
         type: array
