--- a/components/schemas/common/base/Metadata.yaml
+++ b/components/schemas/common/base/Metadata.yaml
@@ -1,17 +1,17 @@
 type: object
 required:
-  - created_date
-  - updated_date
-  - is_active
+  - createdDate
+  - updatedDate
+  - isActive
 properties:
-  created_date:
+  createdDate:
     type: string
     format: date-time
     description: Creation timestamp
-  updated_date:
+  updatedDate:
     type: string
     format: date-time
     description: Last update timestamp
-  is_active:
+  isActive:
     type: boolean
     description: Whether the record is active or soft-deleted
