--- a/operations/internal/frontend/brand.yaml
+++ b/operations/internal/frontend/brand.yaml
@@ -3,7 +3,7 @@
     summary: List brands by userId
     operationId: listBrandsByUserId
     parameters:
-      - name: user_id
+      - name: userId
         in: query
         required: true
         schema:
