contentitem-update: Update ContentItem schema

--- a/components/schemas/common/base/ContentItem.yaml
+++ b/components/schemas/common/base/ContentItem.yaml
@@ -1,5 +1,12 @@
 type: object
 properties:
+  type:
+    type: string
+    enum:
+      - text
+      - image
+      - video
+      - multiImage
   text:
     $ref: "./Text.yaml"
   image:
@@ -8,3 +15,15 @@ properties:
     $ref: "../media/Video.yaml"
   multiImage:
     $ref: "../media/MultiImage.yaml"
+oneOf:
+  - $ref: "./Text.yaml"
+  - $ref: "../media/Image.yaml"
+  - $ref: "../media/Video.yaml"
+  - $ref: "../media/MultiImage.yaml"
+discriminator:
+  propertyName: type
+  mapping:
+    text: "./Text.yaml"
+    image: "../media/Image.yaml"
+    video: "../media/Video.yaml"
+    multiImage: "../media/MultiImage.yaml"
