--- a/components/schemas/common/media/MultiImageTemplate.yaml
+++ b/components/schemas/common/media/MultiImageTemplate.yaml
@@ -1,9 +1,9 @@
 type: object
 properties:
-  images:
+  imageTemplates:
     type: array
     items:
-      $ref: "./Image.yaml"
+      $ref: "./ImageTemplate.yaml"
     description: Array of image objects
   numImages:
     type: integer
