--- a/components/schemas/common/style/TextStyle.yaml
+++ b/components/schemas/common/style/TextStyle.yaml
@@ -5,4 +5,5 @@ properties:
   outline:
     $ref: "./Outline.yaml"
   alignment:
-    $ref: "./Alignment.yaml"
+    type: string
+    enum: [left, center, right]
