--- a/components/schemas/api/internal/frontend/brand/BrandGet.yaml
+++ b/components/schemas/api/internal/frontend/brand/BrandGet.yaml
@@ -1,4 +1,4 @@
 allOf:
-  - $ref: "../../../documents/BrandDocument.yaml"
+  - $ref: "../../../../documents/BrandDocument.yaml"
 description: >
   Response schema for retrieving a Brand by id or userId.
