--- a/components/schemas/documents/ContentGenerationTemplateDocument.yaml
+++ b/components/schemas/documents/ContentGenerationTemplateDocument.yaml
@@ -8,5 +8,5 @@ allOf:
         $ref: "../common/template/TemplateInfo.yaml"
       schedule:
         $ref: "../common/schedule/Schedule.yaml"
-      settings:
+      templateSettings:
         $ref: "../common/template/TemplateSettings.yaml"
