--- a/components/schemas/api/internal/frontend/content-generation-template/ContentGenerationTemplateCreate.yaml
+++ b/components/schemas/api/internal/frontend/content-generation-template/ContentGenerationTemplateCreate.yaml
@@ -6,10 +6,10 @@ properties:
   brandId:
     type: string
   templateInfo:
-    $ref: "../../../common/template/TemplateInfo.yaml"
+    $ref: "../../../../common/template/TemplateInfo.yaml"
   schedule:
-    $ref: "../../../common/schedule/Schedule.yaml"
-  settings:
-    $ref: "../../../common/template/TemplateSettings.yaml"
+    $ref: "../../../../common/schedule/Schedule.yaml"
+  templateSettings:
+    $ref: "../../../../common/template/TemplateSettings.yaml"
 description: >
   Payload for creating a new ContentGenerationTemplateDocument. 'brandId' and 'templateInfo' are required.
