--- a/components/schemas/api/internal/frontend/content-generation-template/ContentGenerationTemplateGet.yaml
+++ b/components/schemas/api/internal/frontend/content-generation-template/ContentGenerationTemplateGet.yaml
@@ -1,4 +1,4 @@
 allOf:
-  - $ref: "../../../../schemas/documents/ContentGenerationTemplateDocument.yaml"
+  - $ref: "../../../../../schemas/documents/ContentGenerationTemplateDocument.yaml"
 description: >
   Response schema for retrieving a ContentGenerationTemplateDocument by id or brandId.
