--- a/components/schemas/api/internal/frontend/media/MediaUpdate.yaml
+++ b/components/schemas/api/internal/frontend/media/MediaUpdate.yaml
@@ -1,5 +1,5 @@
 allOf:
-  - $ref: "../../../documents/MediaDocument.yaml"
+  - $ref: "../../../../documents/MediaDocument.yaml"
   - type: object
     properties:
       brandId:
@@ -10,5 +10,5 @@ allOf:
         type: string
         enum: [image, video]
       mediaMetadata:
-        $ref: "../../../common/media/MediaMetadata.yaml"
+        $ref: "../../../../common/media/MediaMetadata.yaml"
     # All fields optional for PATCH/PUT
