--- a/components/schemas/common/template/PromptTemplate.yaml
+++ b/components/schemas/common/template/PromptTemplate.yaml
@@ -1,16 +1,15 @@
 type: object
 properties:
-  systemPrompt:
-    type: string
   userPrompt:
-    type: string
-  temperature:
-    type: number
-  maxTokens:
-    type: integer
-  model:
     type: string
   variables:
     type: array
     items:
-      $ref: "./PromptVariable.yaml"
+      type: object
+      properties:
+        name:
+          type: string
+        values:
+          type: array
+          items:
+            type: string
