--- a/v2/paths/brands.yaml
+++ b/v2/paths/brands.yaml
@@ -1,2 +1,3 @@
 /v2/brands/{brandId}:
-  $ref: '../operations/brands/get-brand-by-id.yaml'
+  get:
+    $ref: '../operations/brands/get-brand-by-id.yaml'
