--- a/v2/components/schemas/api/posts/postRequest.yaml
+++ b/v2/components/schemas/api/posts/postRequest.yaml
@@ -3,8 +3,8 @@ properties:
   brandId:
     type: string
     description: The brand this post belongs to.
-  contentCopy:
+  postCopy:
     $ref: '../../common/post/postCopy.yaml'
 required:
   - brandId
-  - contentCopy
+  - postCopy
